[package]
name = "vgtk"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"

[dependencies]
gio = "0.6.0"
glib-sys = "0.8.0"
gtk-sys = "0.9.0"
gobject-sys = "0.8.0"
im = "12.0.0"
glib = "0.7.0"
strum = "0.15.0"
strum_macros = "0.15.0"

[dependencies.gtk]
version = "0.6.0"
features = ["futures", "embed-lgpl-docs"]
