[package]
name = "vgtk-macros"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "LGPL-3.0+"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.5", features = ["nightly"] }
proc-macro-hack = "0.5.2"
quote = "1.0.2"
lalrpop-util = "0.17.0"

[build-dependencies]
version_check = "0.9.1"
lalrpop = "0.17.0"
