[package]
name = "vgtk-macros"
version = "0.2.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "LGPL-3.0+"
description = "Proc macros for vgtk"
repository = "https://github.com/bodil/vgtk"
documentation = "https://docs.rs/vgtk"
homepage = "http://vgtk.rs"
readme = "../README.md"
categories = ["gui"]
keywords = ["gtk"]
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.5", features = ["nightly"] }
proc-macro-hack = "0.5.2"
quote = "1.0.2"
lalrpop-util = "0.19"

[build-dependencies]
version_check = "0.9.1"
lalrpop = "0.18"
