[package]
name = "vgtk"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "LGPL-3.0+"

[dependencies]
# gio = "0.7.0"
# glib = "0.8.0"
# gdk = "0.11.0"
# gdk-pixbuf = "0.7.0"
glib = { git = "https://github.com/gtk-rs/glib.git" }
gio = { git = "https://github.com/gtk-rs/gio.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf.git" }

vgtk-macros = { path = "../macros" }
proc-macro-hack = "0.5.10"
proc-macro-nested = "0.1.3"
log = "0.4.8"
colored = "1.8.0"
futures = "0.3.0"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk.git"
# version = "0.7.0"
features = ["embed-lgpl-docs", "v3_20"]
