[package]
name = "vgtk"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "LGPL-3.0+"
description = "A declarative UI framework for GTK"
repository = "https://github.com/bodil/vgtk"
documentation = "https://docs.rs/vgtk"
readme = "../README.md"
categories = ["gui"]
keywords = ["gtk"]

[dependencies]
gio = "0.8.0"
glib = "0.9.0"
gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
vgtk-macros = "0.1.0"
proc-macro-hack = "0.5.10"
proc-macro-nested = "0.1.3"
log = "0.4.8"
colored = "1.8.0"
futures = "0.3.0"

[dependencies.gtk]
version = "0.8.0"
features = ["embed-lgpl-docs", "v3_20"]
