[package]
name = "vgtk"
version = "0.3.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "LGPL-3.0+"
description = "A declarative UI framework for GTK"
repository = "https://github.com/bodil/vgtk"
documentation = "https://docs.rs/vgtk"
homepage = "http://vgtk.rs"
readme = "../README.md"
categories = ["gui"]
keywords = ["gtk"]

[features]
dox = ["gtk/embed-lgpl-docs"]

[dependencies]
gio = "0.9.0"
glib = "0.10.0"
gdk = "0.13.0"
gdk-pixbuf = "0.9.0"
vgtk-macros = "0.3.0"
proc-macro-hack = "0.5.16"
proc-macro-nested = "0.1.6"
log = "0.4.8"
colored = "1.9.3"
futures = "0.3.5"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_20"]

[package.metadata.docs.rs]
features = ["dox"]
