[package]
name = "todomvc"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "GPL-3.0+"

[dependencies]
vgtk = { path = "../../vgtk" }
strum = "0.16.0"
strum_macros = "0.16.0"
pretty_env_logger = "0.3.1"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
futures = "0.3.1"

[features]
default = ["box-layout"]
box-layout = []
grid-layout = []