[package]
name = "todomvc"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "GPL-3.0+"

[dependencies]
vgtk = { path = "../../vgtk" }
strum = "0.18"
strum_macros = "0.19"
pretty_env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
